crates/graphql-project/tests/snapshots/validation_snapshots__complex_nested_error_snapshot.snap
---
source: crates/graphql-project/tests/validation_snapshots.rs
expression: format_diagnostics(&diagnostics)
---
Error: type `User` does not have a field `invalidField`
    ╭─[ complex.graphql:6:5 ]
    │
  6 │     invalidField
    │     ──────┬─────  
    │           ╰─────── field `invalidField` selected here
    │
    ├─[ schema.graphql:15:6 ]
    │
 15 │ type User {
    │      ──┬─  
    │        ╰─── type `User` defined here
    │ 
    │ Note: path to the field: `query ComplexQuery → user → invalidField`
────╯


Error: type `User` does not have a field `anotherInvalidField`
    ╭─[ complex.graphql:12:9 ]
    │
 12 │         anotherInvalidField
    │         ─────────┬─────────  
    │                  ╰─────────── field `anotherInvalidField` selected here
    │
    ├─[ schema.graphql:15:6 ]
    │
 15 │ type User {
    │      ──┬─  
    │        ╰─── type `User` defined here
    │ 
    │ Note: path to the field: `query ComplexQuery → user → posts → author → anotherInvalidField`
────╯


Error: type `Post` does not have a field `nonExistentField`
    ╭─[ complex.graphql:18:5 ]
    │
 18 │     nonExistentField
    │     ────────┬───────  
    │             ╰───────── field `nonExistentField` selected here
    │
    ├─[ schema.graphql:23:6 ]
    │
 23 │ type Post {
    │      ──┬─  
    │        ╰─── type `Post` defined here
    │ 
    │ Note: path to the field: `query ComplexQuery → post → nonExistentField`
────╯
